--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@mui/material": "^6.1.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-web": "~0.19.10",
+    "react-select": "^5.8.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
